# data-contract-enforcer

./: .env.example  .gitignore  DOMAIN_NOTES.md  PRESENTATION.md  README.md  create_violation.py  generate_outputs.py  inject_violation.py  pyproject.toml  requirements.txt
contracts/: ai_extensions.py  attributor.py  generator.py  report_generator.py  runner.py  schema_analyzer.py
dashboard/: app.py
dbt_project/: dbt_project.yml  profiles.yml.example
enforcer_report/: report_data.json  sunday_report_content.md  thursday_report_content.md
generated_contracts/: langsmith-traces.yaml  langsmith-traces_dbt.yml  week1-intent-records.yaml  week1-intent-records_dbt.yml  week2-verdicts.yaml  week2-verdicts_dbt.yml  week3-document-refinery-extractions.yaml  week3-document-refinery-extractions_dbt.yml  week3-test.yaml  week3-test_dbt.yml  week4-lineage-snapshots.yaml  week4-lineage-snapshots_dbt.yml  week5-event-records.yaml  week5-event-records_dbt.yml
schema_snapshots/: baselines.json  subscriptions.json
scripts/: simulate_failures.py
tests/: test_attributor_properties.py  test_report_properties.py  test_runner_properties.py
validation_reports/: ai_extensions.json  ai_metrics.json  demo_violation.json  injected_violation.json  langsmith-traces_run.json  schema_evolution.json  schema_evolution_demo.json  schema_evolution_langsmith-traces.json  schema_evolution_week1-intent-records.json  schema_evolution_week2-verdicts.json  schema_evolution_week3-document-refinery-extractions.json  schema_evolution_week3-test.json  schema_evolution_week3.json  thursday_baseline.json  (+13 more)
(+49 files in other folders)
